fixed calculator width stretching

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ html {
     margin: auto;
     margin-bottom: 5%;
     margin-top: 5%;
-    width: 25%;
+    width: 450px;
     height: 650px;
 }
 .calcButton {
